--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-upload": "^45.0.0",
+    "@ckeditor/ckeditor5-vue": "^7.3.0",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@nuxt/image": "^1.10.0",
     "@prisma/client": "^6.7.0",
     "@types/leaflet": "^1.9.17",
+    "@tinymce/tinymce-vue": "^5.1.1",
     "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
@@ -23,6 +27,7 @@
     "pinia": "^3.0.2",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.19.1",
+    "tinymce": "^6.8.4",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
